# aubo_robot

./: .gitignore
aubo_controller/: CMakeLists.txt  package.xml  rosconsole.conf
aubo_controller/config/: joint_names.yaml
aubo_controller/include/aubo_controller/: aubo_controller.h
aubo_controller/launch/: aubo_controller.launch
aubo_controller/src/: aubo_controller.cpp  aubo_robot_simulator.cpp  joint_trajectory_action.cpp
aubo_controller_manager/: CMakeLists.txt  aubo_controller_manager_plugin_description.xml  package.xml
aubo_controller_manager/include/aubo_controller_manager/: aubo_controller_manager.h  gripper_command_controller_handle.h  joint_trajectory_controller_handle.h
aubo_controller_manager/src/: aubo_controller_manager.cpp
aubo_description/: CMakeLists.txt  package.xml
aubo_description/launch/: aubo_i10.launch  aubo_i3.launch  aubo_i5.launch  aubo_i7.launch  display.launch  gazebo.launch
aubo_description/rviz/: robot_model.rviz  urdf.rviz
aubo_description/urdf/: aubo.gazebo.xacro  aubo.transmission.xacro  aubo_i10.urdf.xacro  aubo_i10_robot.urdf.xacro  aubo_i3.urdf.xacro  aubo_i3_robot.urdf.xacro  aubo_i5.urdf  aubo_i5.urdf.xacro  aubo_i5_robot.urdf.xacro  aubo_i7.urdf.xacro  common.gazebo.xacro  materials.xacro
aubo_driver/: CMakeLists.txt  package.xml
aubo_driver/config/: aubo.yaml  joint_names.yaml  joints.yaml  login.yaml  tcp.yaml
aubo_driver/include/aubo_driver/: aubo_driver.h  aubo_robot.h  error_codes.h
aubo_driver/launch/: aubo_driver.launch  aubo_i10.launch  aubo_i3.launch  aubo_i5.launch  aubo_i7.launch
aubo_driver/src/: aubo_driver.cpp  aubo_robot.cpp  driver_node.cpp
aubo_gazebo/config/: aubo_i5_gazebo_control.yaml
aubo_gazebo/launch/: aubo_i5_gazebo_control.launch
aubo_gazebo/urdf/: aubo_i5.xacro
aubo_hardware_interface/: CMakeLists.txt  package.xml  rosconsole.conf
aubo_hardware_interface/config/: aubo.yaml  calibration.yaml  controllers.yaml  hardware.yaml  tcp.yaml
aubo_hardware_interface/include/aubo_hardware_interface/: aubo_driver.h  aubo_hardware_interface.h  aubo_robot.h  time.h
aubo_hardware_interface/launch/: aubo_i3.launch  aubo_i5.launch  aubo_i7.launch  controllers.launch
aubo_hardware_interface/src/: aubo_hardware_interface.cpp  aubo_hardware_interface_node.cpp  aubo_robot.cpp
aubo_i10_moveit_config/: .setup_assistant  package.xml
aubo_i10_moveit_config/config/: kinematics.yaml
aubo_i10_moveit_config/launch/: demo_gazebo.launch  gazebo.launch  moveit.rviz  planning_context.launch
aubo_i3_moveit_config/: .setup_assistant  package.xml
aubo_i3_moveit_config/config/: aubo_i3.srdf  controllers.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml
aubo_i3_moveit_config/launch/: aubo_i3_moveit_controller_manager.launch  aubo_i3_moveit_controller_manager.launch.xml  chomp_planning_pipeline.launch.xml  demo_gazebo.launch  gazebo.launch  move_group.launch  moveit.rviz  moveit_planning_execution.launch  moveit_rviz.launch  planning_context.launch  ros_controllers.launch  trajectory_execution.launch.xml
aubo_i5_moveit_config/: package.xml  rosconsole.conf
aubo_i5_moveit_config/config/: controllers.yaml  joint_limits.yaml  kinematics.yaml  ros_controllers.yaml
aubo_i5_moveit_config/launch/: aubo_i5_moveit_controller_manager.launch  aubo_i5_moveit_controller_manager.launch.xml  demo.launch  move_group.launch  moveit.rviz  moveit_planning_execution.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  trajectory_execution.launch.xml
aubo_i5_moveit_config/params/: goals.yaml
aubo_kinematics/: CMakeLists.txt
aubo_kinematics/include/aubo_kinematics/: aubo_moveit_plugin.h
aubo_kinematics/src/: aubo_moveit_plugin.cpp
