<package format="2">
  <name>aubo_controller</name>
  <version>1.3.3</version>
  <description>
    The aubo_controller package
  </description>
  <license>BSD</license>

  <author email="liug@our-robotics.com">Allen Liu</author>
  <maintainer email="liug@our-robotics.com">Allen Liu</maintainer>

  <url type="website">http://wiki.ros.org/aubo_trajectory</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>control_msgs</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>urdf</depend>
  <depend>industrial_msgs</depend>
  <depend>industrial_utils</depend>

</package>
