<package format="2">
  <name>aubo_hardware_interface</name>
  <version>0.0.0</version>
  <description>
    The aubo_hardware_interface package
  </description>
  <license>TODO</license>

  <author email="nicola@sysdesign.it">Nicola Conti</author>
  <maintainer email="nicola@sysdesign.it">Nicola Conti</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <!-- -->
  <depend>roscpp</depend>
  <depend>xmlrpcpp</depend>
  <depend>hardware_interface</depend>
  <depend>transmission_interface</depend>
  <depend>controller_manager</depend>
  <!-- -->
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>

</package>
